welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:9: error: ')' expected but '}' found.
  }
  ^noTriples:12: error: Unmatched closing brace '}' ignored here
        } 
        ^